# todam-ticket-system

./: .env.example  .gitignore  Dockerfile  README.md  app.py  cdk.json  cdk.py  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/: mock.py
app/cases/: __init__.py  chat_history.py  segment.py  submit.py  summarized_content.py  summerized_content.py  ticket_summarized.py
app/controllers/: mock_ticket.py
app/infra/web/: router.py
app/utils/: data_type.py  listener.py  recording_contents.py  summarized.py  update.py
app/views/: dashboard.py
app/views/components/: converted.py  information.py  status_bar.py
app/views/v2/: dashboard.py
docs/: README.md  bedrock_model.md  bedrock_test.md  linebot.md  segment_name.md
toy_example/: azure_model_deployment.py  bedrock_model.py  enum_test.py  get_summerized.py  load_chat_history.py  markdown_render.py  payload_format.py  remove_header_prefix.py
